Add code for angular-16.2.0 integrate-header-component.
[Url: razroo.com/community/angular-16.2.0/header/integrate-header-component]

--- a/apps/test-henry-jello-one/src/app/app.component.html
+++ b/apps/test-henry-jello-one/src/app/app.component.html
@@ -1,5 +1,4 @@
+<test-henry-jello-one-global-header></test-henry-jello-one-global-header>
 <div class="wrapper">
-  <div class="container">
-    
-  </div>
+  <div class="container"></div>
 </div>
