--- a/apps/test-henry-jello-one/src/app/app.component.html
+++ b/apps/test-henry-jello-one/src/app/app.component.html
@@ -2,3 +2,4 @@
 <div class="wrapper">
   <div class="container"></div>
 </div>
+<test-henry-jello-one-global-footer> </test-henry-jello-one-global-footer>
