Add code for angular-16.2.0 add-header-toggle-event.
[Url: razroo.com/community/angular-16.2.0/side-nav-recipe/add-header-toggle-event]

--- a/apps/test-henry-jello-one/src/app/app.component.html
+++ b/apps/test-henry-jello-one/src/app/app.component.html
@@ -1,4 +1,6 @@
-<test-henry-jello-one-global-header></test-henry-jello-one-global-header>
+<test-henry-jello-one-global-header
+  (sideNavToggle)="sideNavToggle()"
+></test-henry-jello-one-global-header>
 <div class="wrapper">
   <div class="container"></div>
 </div>
