--- a/apps/test-henry-jello-one/src/app/app.component.html
+++ b/apps/test-henry-jello-one/src/app/app.component.html
@@ -2,6 +2,20 @@
   (sideNavToggle)="sideNavToggle()"
 ></test-henry-jello-one-global-header>
 <div class="wrapper">
-  <div class="container"></div>
+  <div class="container">
+    <test-henry-jello-one-global-sidenav [opened]="sideNavOpen">
+      <mat-nav-list sidenav>
+        <a
+          mat-list-item
+          routerLinkActive="active-link"
+          routerLink="/"
+          (click)="sideNavToggle()"
+        >
+          <span class="App__sidenav-text">Home</span>
+        </a>
+      </mat-nav-list>
+      <router-outlet></router-outlet>
+    </test-henry-jello-one-global-sidenav>
+  </div>
 </div>
 <test-henry-jello-one-global-footer> </test-henry-jello-one-global-footer>
