Add code for auth-0-angular-16.2.0 add-authentication-event-handlers.
[Url: razroo.com/razroo/auth-0-angular-16.2.0/add-login-ui/add-authentication-event-handlers]

--- a/apps/test-henry-jello-one/src/app/app.component.html
+++ b/apps/test-henry-jello-one/src/app/app.component.html
@@ -1,5 +1,7 @@
 <test-henry-jello-one-global-header
   (sideNavToggle)="sideNavToggle()"
+  (logIn)="logIn()"
+  (signUp)="signUp()"
 ></test-henry-jello-one-global-header>
 <div class="wrapper">
   <div class="container">
